<resources>
    <string name="app_name">Courses Offered By Acadgild</string>
    <string name="Java">Java</string>
    <string name="Android">Android Development</string>
    <string name="FrontEnd">FrontEnd Development</string>
    <string name="BigData">Big Data</string>
    <string name="DigitalMarketing">Digital Marketing</string>
    <string name="ScalaProgramming">Scala Programming</string>
    <string name="NodeJS">NodeJS</string>
    <string name="FullStack">FullStack Web Developer</string>
    <string name="AdvanceJ2ee">Advance J2e</string>
    <string name="Robotics">Robotics</string>
    <string name="Business_Analytics">Business Analytics</string>
    <string name="CloudComputing">Cloud ComputingR</string>
    <string name="ApacheSpark">ApacheSpark</string>
    <string name="DataScience">Data Science</string>
    <string name="Arduino">Arduino</string>
    <string name="RaspberryPi">RaspberryPi</string>
    <string name="Unity2D">unity2D</string>
    <string name="iOS">iOS programming</string>
    <string name="ReactJS">React JS</string>
    <string name="Ethical_Hacking">Ethical Hacking</string>
    <string name="ITIL">ITIL</string>
    <string name="Prince2">Prince2</string>
    <string name="MachineLearning">Machine Learning</string>
    <string name="MongoDB">MongoDB</string>


    <string name="JavaTrainer">Java is being Trained by \nS Rajesh Kumar</string>
    <string name="AndroidTrainer">Android is being Trained by \n Akhilesh Tiwari</string>
    <string name="FrontEndTrainer">Frontend is being Trained by \n Kyra/Sarah </string>
    <string name="BigDataTrainerr">BigData is being Trained by \n Crane/ Vihan </string>
    <string name="DigitalMArketingTrainer">DigitalMarketing is being Trained by \n Rajesh Kumar</string>
    <string name="ScalaTrainer">Scala is being Trained by \nS Rajesh Kumar</string>
    <string name="NodeJsTrainer">NodeJS is being Trained by \nS Rajesh Kumar</string>
    <string name="FullStackTrainer">FullStack Development is being Trained by \nS Rajesh Kumar</string>
    <string name="AdvanceJ2eeTrainer">AdvanceJ2ee is being Trained by \nS Rajesh Kumar</string>
    <string name="RoboticsTrainer">Robotics is being Trained by \nS Rajesh Kumar</string>
    <string name="AnalyticsTrainer">Business Analytics is being Trained by \nS Rajesh Kumar</string>
    <string name="CloudComputingTrainer">CloudComputing is being Trained by \nS Rajesh Kumar</string>
    <string name="ApacheSparkTrainer">ApacheSpark is being Trained by \nS Rajesh Kumar</string>
    <string name="DataScienceTrainer">Data Science is being Trained by \nS Rajesh Kumar</string>
    <string name="ArduinoTrainer">Arduino is being Trained by \nS Rajesh Kumar</string>
    <string name="RaspberryTrainer">Raspberry is being Trained by \nS Rajesh Kumar</string>
    <string name="Unity2dTrainer">Unity is being Trained by \nS Rajesh Kumar</string>
    <string name="iOsTrainer">iOS is being Trained by \nS Rajesh Kumar</string>
    <string name="ReactJSTrainer">ReactJS is being Trained by \nS Rajesh Kumar</string>
    <string name="EthicalHackingTrainer">EH is being Trained by \nS Rajesh Kumar</string>
    <string name="ITILTrainer">Java is being Trained by \nS Rajesh Kumar</string>
    <string name="Prince2Trainer">Prince2 is being Trained by \nS Rajesh Kumar</string>
    <string name="MachineLearningTrainer">MachineLearning is being Trained by \nS Rajesh Kumar</string>
    <string name="MongoTrainer">MOngo is being Trained by \nS Rajesh Kumar</string>



</resources>
